--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0-alpha-327d5c484-20211106",
+    "react-dom": "^18.0.0-alpha-327d5c484-20211106",
     "react-scripts": "4.0.3",
     "three": "^0.134.0",
     "web-vitals": "^1.0.1"
