--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "0.0.0-experimental-327d5c484-20211106",
     "react-dom": "0.0.0-experimental-327d5c484-20211106",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
     "three": "^0.134.0",
     "web-vitals": "^1.0.1"
   },
