--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "0.0.0-experimental-327d5c484-20211106",
-    "react-dom": "0.0.0-experimental-327d5c484-20211106",
+    "react": "^18.0.0-beta-24dd07bd2-20211208",
+    "react-dom": "^18.0.0-beta-24dd07bd2-20211208",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.37.5",
     "three": "^0.134.0",
