--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^18.0.0-beta-24dd07bd2-20211208",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.0.0-beta-24dd07bd2-20211208",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.37.5",
