--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/drei": "^7.20.1",
-    "@react-three/fiber": "^7.0.18",
-    "@react-three/postprocessing": "^2.0.5",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^18.0.0-beta-24dd07bd2-20211208",
+    "@react-three/drei": "^9.17.1",
+    "@react-three/fiber": "^8.2.0",
+    "@react-three/postprocessing": "^2.4.6",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.0.0-beta-24dd07bd2-20211208",
-    "react-scripts": "4.0.3",
-    "react-tsparticles": "^1.37.5",
-    "three": "^0.134.0",
-    "web-vitals": "^1.0.1"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.3",
+    "three": "^0.142.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
